--- a/server/kite9-server-java/src/main/resources/static/public/templates/texture/texture.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/texture/texture.css
@@ -1,33 +1,63 @@
 /**
- * Provides some default fill options which can be used to 
- * colour svg elements.  Users are encouraged to adopt the k9-texture attribute
- * and add their own options.  
+ * Provides some _default_ fill options which can be used to 
+ * colour svg elements.  
+ *
+ * Users are encouraged to adopt the k9-texture attribute
+ * and then override for their own colour schemes.
+ *   
  * See designer template and formats/example.adl for an example. 
  */
  
-/** This allows the element to still be selected, but have no real colour */
+/** 
+ * This allows the element to still be selected, but have no real colour 
+ */
 [k9-texture=none] {
 	fill: white;
   fill-opacity: .01;
 }
 
-/** Use this for when the shape is part of the background, and will have other elements on top */
+/** 
+ * Use this for when the shape is part of the background, and will have other elements on top.
+ * You should be able to see the shapes, but they shouldn't block out everything else.
+ */
 [k9-texture=background] {
 	fill: white;
 	fill-opacity: 1;
+  stroke: black;
 }
 
-[k9-texture=solid] {
+[k9-texture=background] text {
+  fill: black;
+  stroke: none;
+}  
+
+/**
+ * This texture is used when none is provided.  It basically defaults to the same thing as
+ * background.
+ */
+[k9-texture=default] {
 	fill: white;
 	fill-opacity: 1;
 }
 
+[k9-texture=default] text {
+  fill: black;
+  stroke: none;
+}  
+
+/**
+ * Use when the object is see-through, but should still be visible.  Use to replace background.
+ */
 [k9-texture=outline] {
   fill: white;
   fill-opacity: .01;
   stroke: black;
 }
 
+/**
+ * Use when the object is in the foreground, and won't have content on
+ * top of it.  
+ */
 [k9-texture=foreground] {
   fill: black;
   fill-opacity: 1;
