--- a/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
@@ -3,7 +3,7 @@
 @import url('/public/fonts/metropolis/metropolis.css');
 @import url(flowchart-shapes.css);
 
-[k9-format=text-shape-inline] > [k9-texture=background] {
+[k9-texture=flowchart-symbol] {
 	fill: #BBBBBB;
 	stroke: black;
 }
@@ -12,10 +12,12 @@
 	fill: white;
 }
 
-text {
+[k9-texture=foreground] > text {
   font-family: "metropolis";
   text-align: start;
-  font-size: 10pt;	
+  font-size: 10pt;
+  stroke: none;
+  fill:  black;	
 }
 
 [k9-elem=textarea] > [k9-texture=background],
