--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks.css
@@ -19,9 +19,6 @@
 	fill: white;
 }
 
-[k9-elem=risk] {
-  --kite9-template: url(template.xml#generic);
-}
 
 /* So-called "fixed risks" - you just need the class. */
 
@@ -183,9 +180,7 @@
 	--kite9-margin: 10pt;
 	--kite9-link-inset: 10pt;
 	--kite9-link-gutter: 10pt;
-	--kite9-type: container;
 	--kite9-padding: 10pt;
-	--kite9-connection-align: 50%;
 	--kite9-min-size: 120pt 160pt;
 }
 
@@ -199,11 +194,14 @@
 	font-weight: 300;
 	fill: black;
 	text-align: middle;
+	--kite9-padding: 0pt;
+	--kite9-margin: 0pt;
 	--kite9-margin-bottom: 15pt;
 }
 
-[k9-elem=risk] > [k9-elem=image] {
+[k9-elem=risk] > [k9-format=image] {
 	--kite9-vertical-align: top;
 	--kite9-horizontal-align: middle;
+	--kite9-padding-left: 0pt;
 }
 
