--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first.css
@@ -22,7 +22,6 @@
 	fill: black;
 	text-align: middle;
 	--kite9-text-bounds-width: 110pt;
-	--kite9-template: url(/public/templates/common/formats/formats-template.xml#textarea);
 	--kite9-padding: 0pt;
 }
 
@@ -62,7 +61,6 @@
   --kite9-type: container;
   --kite9-vertical-align: center;
   --kite9-horizontal-align: center;
-  --kite9-template: url(/public/templates/labels/common-labels-template.xml#label);
   --kite9-padding: 10pt;
   --kite9-label-placement: bottom;
 }
@@ -76,7 +74,6 @@
   --kite9-type: container;
   --kite9-padding: 15pt;
   --kite9-margin: 15pt;
-  --kite9-template: url(/public/templates/containers/containers-template.xml#container);
   --kite9-sizing: minimize;
 }
 
@@ -85,9 +82,8 @@
 
 [k9-elem=arrow] {
 	--kite9-padding: 8pt 5pt 8pt 5pt;
-	--kite9-type: container;
+	--kite9-type: text;
 	--kite9-sizing: minimize;
-	--kite9-template: url(/public/templates/common/formats/formats-template.xml#inline-text) '4pt' '4pt';
 	--kite9-connections: separate;
 	--kite9-connection-align: 50%;
 	font-size: 14pt;
@@ -96,27 +92,23 @@
 	--kite9-link-inset: 3pt;
 }
 
-[k9-elem=arrow][k9-texture=solid] > [k9-elem=back] {
+[k9-elem=arrow] > [k9-texture=background] {
 	fill: black;	
 	fill-opacity: 1; 
 }
 
-[k9-elem=arrow] > [k9-elem=textarea] {
+[k9-elem=arrow] > [k9-texture=foreground] {
 	fill: white;
 	fill-opacity: 1; 
 }
 
-from,
-to {
+[k9-elem=from],
+[k9-elem=to] {
 	--kite9-marker-reserve: 8pt;
 }
 
-link {
+[k9-elem=link] {
 	--kite9-link-minimum-length: 30pt;
-}
-
-[k9-elem=image] {
-   --kite9-template: url(/public/templates/common/formats/formats-template.xml#image-editable);
 }
 
 /* Fills */
@@ -124,10 +116,6 @@ link {
 [k9-elem=action] [k9-texture=background] {
 	 fill: url(#risk-background);
    stroke: black; 
-}
-
-[k9-texture=solid] > [k9-elem=shape] {
-   stroke: black;
 }
 
 [k9-elem=votes] .count {
