--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/actions.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/actions.css
@@ -1,17 +1,23 @@
 /* Actions */
 
 [k9-elem=action] {
-	--kite9-type: container;
-	--kite9-template: url(template.xml#action);
+	--kite9-type: text;
 	--kite9-sizing: minimize;
 	--kite9-margin: 10pt;
+	--kite9-padding: 12pt;
+	--kite9-padding-right: 22pt;
 }
 
 [k9-elem=action].left {
-	--kite9-template: url(template.xml#action-left)
+  --kite9-padding-left: 22pt;
+  --kite9-padding-right: 12pt;
 }
 
-[k9-elem=action] > [k9-elem=shape] {
-  --kite9-usage: decal;
-  --kite9-type: svg;
+[k9-elem=action] > [k9-texture=foreground] {
+  fill-opacity: 1; 
+  font-size: 12pt;
+  font-family: "metropolis";
+  font-weight: 200;
+  fill: black;
+  text-align: middle;
 }
