--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/artifacts.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/artifacts.css
@@ -18,44 +18,16 @@
 	--kite9-link-gutter: 10pt;
 	--kite9-type: container;
 	--kite9-layout: vertical;
-	--kite9-template: url(template.xml#generic-artifact);
 	--kite9-padding: 10pt;
 	--kite9-connection-align: 50%;
 	--kite9-min-size: 110pt 140pt;
 }
 
-[k9-elem=agent-artifact] {
-	--kite9-template: url(template.xml#artifact)  url(redesign/risks/agency_risk_v2.svg);
-}
-
-[k9-elem=document] {
-  --kite9-template: url(template.xml#artifact)  url(redesign/artifacts/document_v2.svg);
-}
-
-[k9-elem=users] {
-	--kite9-template: url(template.xml#artifact)  url(redesign/artifacts/users_v2.svg);
-}
-
-[k9-elem=interface] {
-	--kite9-template: url(template.xml#artifact)  url(redesign/artifacts/interface_v2.svg);
-}
-
-[k9-elem=protocol-artifact] {
-	--kite9-template: url(template.xml#artifact) url(redesign/risks/protocol_risk_v2.svg);
-}
-
-[k9-elem=internal-model-artifact] {
-	--kite9-template: url(template.xml#artifact)  url(redesign/risks/internal_model_risk.svg);
-}
-
-[k9-elem=channel-artifact] {
-	--kite9-template: url(template.xml#artifact) url(redesign/risks/channel_risk_v2.svg);
-}
-
-[k9-elem=component] {
-	--kite9-template: url(template.xml#artifact) url(redesign/artifacts/component_v2.svg);
-}
-
-[k9-elem=generic-artifact] {
-  --kite9-template: url(template.xml#generic-artifact);
+[k9-texture=artifact] {
+  font-size: 12pt;
+  font-family: "metropolis";
+  font-weight: 200;
+  fill: black;
+  text-align: middle;
+  --kite9-text-bounds-width: 100pt;
 }
