--- a/server/kite9-server-java/src/main/resources/static/public/templates/labels/labels.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/labels/labels.css
@@ -1,18 +1,18 @@
-/*
-@params {
-	label-template-uri:  url(common-labels.adl#label);
-}*/
 
 /* Labels */
 
 [k9-elem=label] {
 	--kite9-usage: label;
-	--kite9-type: container;
 	--kite9-sizing: minimize;
-	--kite9-padding: 4pt;
-	--kite9-margin: 4pt;
 	--kite9-sizing: minimize;
 	--kite9-label-placement: bottom-left;
+}
+
+[k9-elem=label=inner] {
+  --kite9-usage: label;
+  --kite9-sizing: minimize;
+  --kite9-padding: 4pt;
+  --kite9-margin: 4pt;	
 }
 
 [k9-elem=label][end=to] {
@@ -23,3 +23,6 @@
 	--kite9-link-end: from;
 }
 
+[k9-elem=label] [k9-texture=background] {
+	 stroke: none;
+}
