--- a/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic.css
@@ -10,7 +10,6 @@
 [k9-elem=box] {
 	--kite9-padding: 10pt;
 	--kite9-sizing: minimize;
-	--kite9-type: container;
 	--kite9-margin: 20pt;
 	--kite9-min-size: 100pt 100pt;
 	--kite9-connection-align: 50%;
@@ -27,14 +26,12 @@
 [k9-elem=clearbox] {
 	--kite9-padding: 10pt;
 	--kite9-sizing: maximize;
-	--kite9-type: container;
 	--kite9-margin: 20pt;
 	--kite9-min-size: 100pt 100pt;
 	--kite9-connection-align: 50%;
 }
 
 [k9-elem=textarea] {
-	--kite9-type: text;
 	--kite9-margin: 4pt;
 	--kite9-vertical-align: center;
 	--kite9-connection-align: 50%;
@@ -50,14 +47,13 @@
 /* Labels */
 
 [k9-elem=label] {
-	fill: gray;
-	font-family: "metropolis";
-	font-size: 16pt;
-	--kite9-padding: 10pt;
+  --kite9-padding: 10pt;
 }
 
-[k9-elem=label] > [k9-elem=text] {
-	fill: black;
+[k9-elem=label] > [k9-texture=foreground]	{
+  fill: black;
+	font-family: "metropolis";
+	font-size: 16pt;
 }
 
 [k9-elem=cell] {
