--- a/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml.css
@@ -1,24 +1,8 @@
-
-@import url('/public/templates/common/common.css');
-@import url('/public/templates/containers/common-containers.css');
-@import url('/public/templates/links/common-links.css');
-@import url('/public/templates/labels/common-labels.css');
-@import url('/public/templates/grid/common-grid.css');
+@import url('/public/templates/adl/adl.css');
 @import url('/public/fonts/metropolis/metropolis.css');
 @import url('uml-shapes.css');
 @import url('uml-components.css');
 @import url('/public/templates/editor/editor.css');
-
-@script url('uml.js');
-
-@params {
-	palettes: 
-   url('/public/templates/uml/palette.adl') "connected"
-   url('/public/templates/containers/common-containers.adl') "connected"
-   url('/public/templates/links/common-links.adl') "link"
-   url('/public/templates/links/common-ends.adl') "end";
-}
-
 
 /**
  * Fonts and colours 
@@ -60,13 +44,7 @@
 	--kite9-margin-bottom: 2pt;
 }
 
-[k9-shape=actor] > [k9-elem=back],
-[k9-shape=interface] > [k9-elem=back],
-[k9-shape=use-case] > [k9-elem=back],
-[k9-shape=note] > [k9-elem=back],
-[k9-shape=component] > [k9-elem=back],
-[k9-shape=uml-container] > [k9-elem=back],
-[k9-shape=package] > [k9-elem=back] {
+[k9-texture=background] {
 	fill: #BBBBBB;
   stroke: black;
 }
