--- a/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml.css
@@ -13,8 +13,6 @@
 	--kite9-padding: 0pt;
 }
 
-[k9-elem=actor],
-[k9-elem=interface],
 [k9-elem=use-case],
 [k9-elem=note],
 [k9-elem=component],
@@ -23,16 +21,26 @@
   --kite9-padding: 10pt;
 }
 
-[k9-elem=actor] > [k9-elem=depiction],
+[k9-elem=actor] > [k9-elem=depiction] {
+  --kite9-min-size: 30pt 30pt;
+  --kite9-margin: 5pt; 
+  --kite9-padding: 0pt;  
+  fill: rgb(231, 230, 232);
+  stroke: black;
+}
+
+
 [k9-elem=interface] [k9-elem=depiction] {
 	--kite9-min-size: 20pt 20pt;
 	--kite9-margin: 5pt; 
 	--kite9-padding: 0pt;  
+  fill: rgb(231, 230, 232);
+  stroke: black;
 }
 
 [k9-elem=actor] > [k9-elem=caption],
 [k9-elem=interface] [k9-elem=caption] {
-  --kite9-margin: 5pt;
+  --kite9-margin: 0pt;
   --kite9-padding: 0pt;	
 }
 
@@ -93,7 +101,7 @@
 [k9-texture=background],
 [k9-shape=divider],
 [k9-elem=depiction] {
-	fill: #BBBBBB;
+	fill: rgb(231, 230, 232);
 	stroke: black;
 }
 
@@ -103,12 +111,12 @@
 
 [k9-elem=class] > [k9-texture=background],
 [k9-elem=caption] > [k9-texture=background] {
-	fill: #BBBBBB;
+  fill: rgb(231, 230, 232);
 	stroke: black;
 }
 
 [k9-elem=label] > [k9-texture=background] {
-  fill: #BBBBBB;
+  fill: rgb(231, 230, 232);
   fill-opacity: 0.01;
 }
 
@@ -150,6 +158,8 @@
   --kite9-padding: 0pt;
   --kite9-margin: 0pt;
   --kite9-min-height: 20pt;
+  --kite9-traversal-top: none;
+  
 }
 
 [k9-elem=class-name],
