--- a/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/arrow.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/arrow.css
@@ -9,23 +9,23 @@
   --kite9-margin-right: 10pt;
   --kite9-margin-left: 10pt;
   --kite9-margin-bottom: 10pt;
-  --kite9-type: container;
-  --kite9-sizing: minimize;
   --kite9-connections: separate;
-  --kite9-connection-align: 50%;
-  font-weight: 400;
+  --kite9-connection-align: 50%; 
   --kite9-link-inset: 10pt;
   --kite9-link-gutter: 10pt;
+  --kite9-padding: 0;
+  
 }
 
-[k9-texture=solid][k9-elem=arrow] > [k9-elem=back] {
+[k9-elem=arrow] > [texture=background] {
 	fill: black;
 	fill-opacity: 1;
 }
 
 
-[k9-elem=arrow] > [k9-elem=textarea] {
+[k9-elem=arrow] > [texture=foreground] {
   fill: white;
   stroke: none;
   font-size: 12pt;
+  font-weight: 400;
 }
