--- a/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/glyph.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/glyph.css
@@ -1,5 +1,4 @@
 [k9-elem=glyph] {
-  --kite9-type: container;
   --kite9-layout: down;
   --kite9-padding-top: 6pt;
   --kite9-padding-right: 10pt;
@@ -13,45 +12,45 @@
   --kite9-connection-align: 50%;
 }
 
-[k9-elem=glyph][k9-texture=solid] > [k9-elem=back] {
+[k9-elem=glyph] > [texture=background] {
   fill: url('#glyph-background'); 
   fill-opacity: 1;
   stroke: black;
 }
 
 [k9-elem=glyph] > [k9-elem=stereotype] {
-  --kite9-type: container;
   --kite9-horizontal-align: center;
-  --kite9-sizing: minimize;
+  --kite9-padding-top: 2pt;
+  --kite9-padding-right: 2pt;
+  --kite9-padding-bottom: 2pt;
+  --kite9-padding-left: 2pt;
+
+ /* --kite9-margin-top: 5pt;
+  --kite9-margin-right: 5pt;
+  --kite9-margin-left: 5pt;
+  --kite9-margin-bottom: 5pt;*/
+}
+
+[k9-elem=glyph] > [k9-elem=stereotype] > [texture=foreground] {
   text-align: middle;
   font-weight: 700;
+  font-family: opensans;
   font-size: 12pt;
   fill: black;
   stroke: none;
-    --kite9-padding-top: 2pt;
-    --kite9-padding-right: 2pt;
-    --kite9-padding-bottom: 2pt;
-    --kite9-padding-left: 2pt;
-
-    --kite9-margin-top: 5pt;
-    --kite9-margin-right: 5pt;
-    --kite9-margin-left: 5pt;
-    --kite9-margin-bottom: 5pt;
 }
 
 [k9-elem=glyph] > [k9-elem=label] {
 	--kite9-usage: connected;
-  --kite9-type: container;
-  --kite9-sizing: maximize;
-    --kite9-padding-top: 2pt;
-    --kite9-padding-right: 2pt;
-    --kite9-padding-bottom: 2pt;
-    --kite9-padding-left: 2pt;
+  --kite9-padding-top: 2pt;
+  --kite9-padding-right: 2pt;
+  --kite9-padding-bottom: 2pt;
+  --kite9-padding-left: 2pt;
 
-    --kite9-margin-top: 5pt;
-    --kite9-margin-right: 5pt;
-    --kite9-margin-left: 5pt;
-    --kite9-margin-bottom: 5pt;
+  --kite9-margin-top: 5pt;
+  --kite9-margin-right: 5pt;
+  --kite9-margin-left: 5pt;
+  --kite9-margin-bottom: 5pt;
   font-size: 15pt;
   fill: black;
   font-weight: 400;
