--- a/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/symbols.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/symbols.css
@@ -1,14 +1,13 @@
 [k9-elem=symbol] {
-  --kite9-type: container;
-    --kite9-padding-top: 2pt;
-    --kite9-padding-right: 2pt;
-    --kite9-padding-bottom: 2pt;
-    --kite9-padding-left: 2pt;
+  --kite9-padding-top: 2pt;
+  --kite9-padding-right: 2pt;
+  --kite9-padding-bottom: 2pt;
+  --kite9-padding-left: 2pt;
 
-    --kite9-margin-top: 0pt;
-    --kite9-margin-right: 2pt;
-    --kite9-margin-left: 0pt;
-    --kite9-margin-bottom: 5pt;
+  --kite9-margin-top: 0pt;
+  --kite9-margin-right: 2pt;
+  --kite9-margin-left: 0pt;
+  --kite9-margin-bottom: 5pt;
   --kite9-sizing: minimize;
   --kite9-connection-align: 50%;
   --kite9-link-inset: 0pt;
@@ -19,11 +18,11 @@
   --kite9-vertical-align: middle;
 }
 
-[k9-texture=symbol] > [k9-elem=back] {
+[texture=symbol] > [k9-elem=back] {
 	stroke: none;
 }
 
-[k9-texture=symbol] > [k9-elem=textarea] {
+[texture=symbol] > [k9-elem=textarea] {
 	fill: white;
 }
 
