--- a/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/arrow.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/designer/textures/arrow.css
@@ -17,13 +17,13 @@
   
 }
 
-[k9-elem=arrow] > [texture=background] {
+[k9-elem=arrow] > [k9-texture=background] {
 	fill: black;
 	fill-opacity: 1;
 }
 
 
-[k9-elem=arrow] > [texture=foreground] {
+[k9-elem=arrow] > [k9-texture=foreground] {
   fill: white;
   stroke: none;
   font-size: 12pt;
