--- a/server/kite9-server-java/src/main/resources/static/public/templates/labels/labels.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/labels/labels.css
@@ -22,6 +22,6 @@
 	--kite9-link-end: from;
 }
 
-[k9-elem=label] [texture=background] {
+[k9-elem=label] [k9-texture=background] {
 	 stroke: none;
 }
