--- a/server/kite9-server-java/src/main/resources/static/public/templates/bpmn/bpmn.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/bpmn/bpmn.css
@@ -26,7 +26,7 @@
 
 
 
-[format=inline-text] > [k9-elem=back],
+[k9-k9-format=inline-text] > [k9-elem=back],
 [k9-elem=depiction] > [k9-elem=back]  {
 	fill: #FFFFFF;
 	stroke: black;
