--- a/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
@@ -3,7 +3,7 @@
 @import url('/public/fonts/metropolis/metropolis.css');
 @import url(flowchart-shapes.css);
 
-[texture=flowchart-symbol] {
+[k9-texture=flowchart-symbol] {
 	fill: #BBBBBB;
 	stroke: black;
 }
@@ -12,7 +12,7 @@
 	fill: white;
 }
 
-[texture=foreground] > text {
+[k9-texture=foreground] > text {
   font-family: "metropolis";
   text-align: start;
   font-size: 10pt;
@@ -20,8 +20,8 @@
   fill:  black;	
 }
 
-[k9-elem=textarea] > [texture=background],
-[k9-elem=label] > [texture=background] { 
+[k9-elem=textarea] > [k9-texture=background],
+[k9-elem=label] > [k9-texture=background] { 
   fill: none;
   stroke: none;
 }
