--- a/server/kite9-server-java/src/main/resources/static/public/templates/formats/formats.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/formats/formats.css
@@ -1,7 +1,7 @@
 /** text-inline, text-inline-fixed format */
 
-[format=text-shape-inline],
-[format=text-fixed] {
+[k9-format=text-shape-inline],
+[k9-format=text-fixed] {
   --kite9-type: text;
   --kite9-vertical-align: center;
   --kite9-connection-align: 50%;
@@ -13,8 +13,8 @@
 
 /** image, image-fixed format */
 
-[format=image],
-[format=image-fixed] {
+[k9-format=image],
+[k9-format=image-fixed] {
   --kite9-type: svg;
   --kite9-horizontal-align: center;
   --kite9-vertical-align: center;
@@ -23,7 +23,7 @@
 
 /* shape */
 
-[format=shape] {
+[k9-format=shape] {
   --kite9-type: container;
   --kite9-horizontal-align: center;
   --kite9-vertical-align: center;
@@ -33,7 +33,7 @@
 
 /* container format */
 
-[format=container] {
+[k9-format=container] {
 	--kite9-type: container;
 	--kite9-sizing: minimize;
 	--kite9-margin: 15pt;
@@ -42,25 +42,25 @@
 
 /* text-captioned, text-portrait format */
 
-[format=text-image-portrait],
-[format=text-image-captioned],
-[format=text-shape-captioned],
-[format=text-shape-portrait] {
+[k9-format=text-image-portrait],
+[k9-format=text-image-captioned],
+[k9-format=text-shape-captioned],
+[k9-format=text-shape-portrait] {
 	--kite9-type: container;
 	--kite9-sizing: minimize;
 	--kite9-margin: 16pt;
 }
 
-[format=text-image-portrait],
-[format=text-shape-portrait] {
+[k9-format=text-image-portrait],
+[k9-format=text-shape-portrait] {
   --kite9-layout: down;
 }
 
 /* depiction:  a shape inside an object */
 
-[format=text-shape-captioned] > [k9-elem=depiction],
-[format=text-image-portrait] > [k9-elem=depiction],
-[format=text-shape-portrait] > [k9-elem=depiction] {
+[k9-format=text-shape-captioned] > [k9-elem=depiction],
+[k9-format=text-image-portrait] > [k9-elem=depiction],
+[k9-format=text-shape-portrait] > [k9-elem=depiction] {
   --kite9-type: container;
   --kite9-min-size: 50pt 50pt;
   --kite9-margin: 15pt;
@@ -70,9 +70,9 @@
 
 /* caption:  text inside the object */
 
-[format=text-image-portrait] > [k9-elem=caption],
-[format=text-shape-portrait] > [k9-elem=caption],
-[format=text-shape-captioned] > [k9-elem=caption]  {
+[k9-format=text-image-portrait] > [k9-elem=caption],
+[k9-format=text-shape-portrait] > [k9-elem=caption],
+[k9-format=text-shape-captioned] > [k9-elem=caption]  {
   --kite9-type: text;
   --kite9-padding: 5pt;
   --kite9-horizontal-align: center;
@@ -84,12 +84,12 @@
 
 /* align: aligns the contents of the object */
 
-[format=text-shape-captioned] > [k9-elem=shape-align] {
+[k9-format=text-shape-captioned] > [k9-elem=shape-align] {
   --kite9-type: link;
 }
 
-[format=text-shape-captioned] > [k9-elem=shape-align] > [k9-elem=from],
-[format=text-shape-captioned] > [k9-elem=shape-align] > [k9-elem=to] {
+[k9-format=text-shape-captioned] > [k9-elem=shape-align] > [k9-elem=from],
+[k9-format=text-shape-captioned] > [k9-elem=shape-align] > [k9-elem=to] {
   --kite9-type: link-end;
 }
 
