--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risks.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risks.css
@@ -40,7 +40,7 @@
 	--kite9-margin-bottom: 15pt;
 }
 
-[k9-elem=risk] > [format=image] {
+[k9-elem=risk] > [k9-format=image] {
 	--kite9-vertical-align: top;
 	--kite9-horizontal-align: middle;
 }
