--- a/server/kite9-server-java/src/main/resources/static/public/templates/texture/texture-defaults.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/texture/texture-defaults.css
@@ -11,7 +11,7 @@
 /** 
  * This allows the element to still be selected, but have no real colour 
  */
-[texture=none] {
+[k9-texture=none] {
 	fill: white;
   fill-opacity: .01;
 }
@@ -20,13 +20,13 @@
  * Use this for when the shape is part of the background, and will have other elements on top.
  * You should be able to see the shapes, but they shouldn't block out everything else.
  */
-[texture=background] {
+[k9-texture=background] {
 	fill: white;
 	fill-opacity: 1;
   stroke: black;
 }
 
-[texture=background] text {
+[k9-texture=background] text {
   fill: black;
   stroke: none;
 }  
