--- a/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml.css
@@ -1,5 +1,5 @@
 @import url('/public/templates/adl/adl.css');
-@import url('uml-textures.css');
+@import url('uml-texture.css');
 @import url('/public/fonts/metropolis/metropolis.css');
 @import url('/public/templates/editor/editor.css');
 
