--- a/server/kite9-server-java/src/main/resources/static/public/templates/texture/texture-defaults.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/texture/texture-defaults.css
@@ -14,6 +14,7 @@
 [k9-texture=none] {
 	fill: white;
   fill-opacity: .01;
+  stroke-width: 0;
 }
 
 /** 
@@ -24,6 +25,11 @@
 	fill: white;
 	fill-opacity: 1;
   stroke: black;
+  stroke-width: 1pt;
+}
+
+[k9-texture=background] > g > text {
+	fill: black;
 }
 
 /**
@@ -33,6 +39,7 @@
 [k9-texture~=default] {
 	fill: white;
 	fill-opacity: 1;
+  stroke-width: 1pt;
 }
 
 /**
@@ -42,6 +49,7 @@
   fill: white;
   fill-opacity: .01;
   stroke: black;
+  stroke-width: 1pt;
 }
 
 /**
@@ -52,6 +60,7 @@
   fill: black;
   fill-opacity: 1;
   stroke: none;
+  stroke-width: 0;
 }
 
 text {
