Containers, formats working

--- a/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
@@ -35,6 +35,7 @@
 .indicators-on [id] > [k9-highlight~=stroke] {
 	stroke: #b7c0fe;
 	stroke-opacity: .8;
+	stroke-width: 1pt;
 }
 
 .indicators-on [id] > [k9-highlight~=fill] {
