--- a/server/kite9-server-java/src/main/resources/static/public/templates/links/links.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/links/links.css
@@ -4,6 +4,8 @@
 [k9-format=link-align],
 [k9-format=link-basic] {
   --kite9-type: link;
+  --kite9-link-from-xpath: ".//*[@k9-elem='from']/@reference";
+  --kite9-link-to-xpath: ".//*[@k9-elem='to']/@reference";
 }
 
 /** 
